GL/src/test/deca/context/valid/deca_sans_objet/declETinit.deca
// Description:
//    test de déclaration et d'initialisation de 2 variables
//
// Resultats:
//    Ok
//
// Historique:
//    cree le 01/01/2026

{
        int x = 2;
        boolean y = true;
}