GL/src/test/deca/context/invalid/deca_sans_objet/declETinit.deca
// Description :
// test de déclaration des variables
//
// Resultats :
// Ligne 11: assign incompatible
//
// Historique:
//    cree le 01/01/2026

{
        int x = false ;
        boolean y = 4 ;
}